fix overflow

--- a/plugins/defaulttheme/css/style.css
+++ b/plugins/defaulttheme/css/style.css
@@ -124,6 +124,13 @@ a {
     padding-left: 4.5%;
 }
 
+.userViewNames {
+    /* Somehow this resolves the issue of the content getting distorted 
+        https://github.com/MediaBrowser/Emby.Theater.Windows/issues/270
+    */
+    overflow: hidden;
+}
+
 .userViewNames .scrollFrameX .scrollSlider {
     padding-left: 3.75%;
 }
